<resources>
    <string name="app_name">FTbao</string>

    <string name="account">我的淘宝</string>
    <string name="home">首页</string>
    <string name="cart">购物车</string>
    <string name="discovery">发现</string>

    <!--Home-->
    <string name="rg_cat">天猫</string>
    <string name="rb_jhs">聚划算</string>
    <string name="rb_catInternational">天猫国际</string>
    <string name="rb_fastFood">外卖</string>
    <string name="rb_catMarket">天猫超市</string>
    <string name="rb_czzx">充值中心</string>
    <string name="rb_fzlx">飞猪旅行</string>
    <string name="rb_ljb">领金币</string>
    <string name="rb_pm">拍卖</string>
    <string name="rb_fl">分类</string>


    <!--Account-->
    <string name="my_ordered">我的订单</string>
    <string name="check_my_ordered">查看全部 ></string>
    <string name="wait_pay">待付款</string>
    <string name="wait_send">待发货</string>
    <string name="has_send">待收货</string>
    <string name="wait_appraise">待评价</string>

    <string name="neccessaryTools">必备工具</string>
    <string name="my_money">我的资产</string>
    <string name="vip_center">会员中心</string>
    <string name="free_use">免费试用</string>
    <string name="telephone_fare">话费充值</string>
    <string name="my_mi">我的小蜜</string>
    <string name="ticket">机票火车票</string>
    <string name="vip_mark">会员积分</string>


    <string name="help">帮助</string>
    <string name="accountname">账户</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="registeruser">用户注册</string>
    <string name="findpassword">找回密码</string>


    <!-- 购物车-->
    <string name="my_cart">购物车</string>
    <string name="cart_edit">编辑全部</string>
    <string name="select_all">全选</string>
    <string name="cal">结算</string>
    <string name="count_all">合计：</string>

    <!--details页面-->
    <string name="Customerservice">客服</string>
    <string name="Collection">收藏</string>
    <string name="shop">店铺</string>

    <!--d发现页面-->
    <string name="publish">发表</string>
    <string name="titile">晒单</string>

    <!--个人信息页面-->
    <string name="setting"> 设置</string>
    <string name="setting_back">返回</string>
    <string name="setting_image">头像</string>
    <string name="setting_username">用户名</string>
    <string name="setting_pwd">密码</string>
    <string name="setting_phone">手机号码</string>
    <string name="setting_sex">性别</string>
    <string name="setting_birthday">生日</string>
    <string name="setting_adress">收货地址</string>
    <string name="setting_loginout">退出登录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tshirt_details">TshirtDetailsActivity</string>
</resources>
