<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jinbiao.ftbao.activity.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/accountActionBar"
        android:padding="5dp">
        <Button
            android:id="@+id/setting_back"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:layout_margin="5dp"
            android:background="@drawable/setting_return"
           />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/setting"/>
        <Button
            android:id="@+id/setting_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/accountActionBar"
            android:textSize="12dp"
            android:text="保存"
            />


    </LinearLayout>
    <!--<android.support.v7.widget.RecyclerView-->
        <!--android:id="@+id/user_info"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"/>-->
    <LinearLayout
        android:id="@+id/ll_image"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="15dp"
        android:layout_marginTop="8dp"
        android:background="#eee"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/setting_image"/>

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/user_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            style="@style/roundedImage"
            android:src="@mipmap/notify_small_icon"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/rb_text_color_normal"
            android:textSize="20sp"
            android:text="  >"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_username"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="15dp"
        android:layout_marginTop="5dp"
        android:background="#eee"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/setting_username"/>

        <TextView
            android:id="@+id/username_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="详情"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/rb_text_color_normal"
            android:text="       >"/>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_pwd"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="15dp"
        android:layout_marginTop="5dp"
        android:background="#eee"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/setting_pwd"/>

        <TextView
            android:id="@+id/pwd_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/rb_text_color_normal"
            android:text="       >"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_phone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="15dp"
        android:layout_marginTop="5dp"
        android:background="#eee"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/setting_phone"/>

        <TextView
            android:id="@+id/phone_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="详情"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/rb_text_color_normal"
            android:text="       >"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sex"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="15dp"
        android:layout_marginTop="5dp"
        android:background="#eee"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/setting_sex"/>

        <TextView
            android:id="@+id/sex_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="详情"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/rb_text_color_normal"
            android:text="       >"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_birthday"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="15dp"
        android:layout_marginTop="5dp"
        android:background="#eee"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/setting_birthday"/>

        <TextView
            android:id="@+id/birthday_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="详情"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/rb_text_color_normal"
            android:text="       >"/>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_adress"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="15dp"
        android:layout_marginTop="5dp"
        android:background="#eee"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/setting_adress"/>

        <TextView
            android:id="@+id/adress_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="详情"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/rb_text_color_normal"
            android:text="       >"/>


    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/setting_loginout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_loginout"
            />
    </android.support.v7.widget.CardView>


</LinearLayout>
