<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="10dp"
    android:background="@mipmap/bg"
    tools:context="com.example.jinbiao.ftbao.activity.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@mipmap/ic_back"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/tv_help"
            android:clickable="true"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="right"
            android:paddingRight="15dp"
            android:text="@string/help"
            />

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorgray"/>

    <android.support.v7.widget.CardView
        android:layout_width="400dp"
        android:layout_height="350dp"
        android:padding="20dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        android:layout_centerInParent="true"
        android:id="@+id/cv">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
                <android.support.design.widget.TextInputLayout
                    android:textColorHint="#c5c5c5"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
                    <EditText
                        android:focusable="true"
                        android:textSize="13sp"
                        android:hint="@string/accountname"
                        android:textColor="#2fa881"
                        android:id="@+id/et_account"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName"
                        android:background="@drawable/selector_bg_edit"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:paddingBottom="2dp"
                        />
                </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:textColorHint="#c5c5c5"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <EditText
                    android:textSize="13sp"
                    android:hint="@string/password"
                    android:textColor="#2fa881"
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="16"
                    android:inputType="textPassword"
                    android:background="@drawable/selector_bg_edit"
                    android:textCursorDrawable="@drawable/bg_input_cursor"
                    android:paddingBottom="2dp"
                    />
            </android.support.design.widget.TextInputLayout>

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal">-->
                <!--<CheckBox-->
                    <!--android:id="@+id/cb_remember"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:padding="10dp"-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:textColor="@color/gray"-->
                    <!--android:text="记住密码"/>-->
                <!--<CheckBox-->
                    <!--android:id="@+id/cb_autologin"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:padding="10dp"-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:textColor="@color/gray"-->
                    <!--android:text="自动登录"/>-->
            <!--</LinearLayout>-->

            <Button
                android:id="@+id/btn_login"
                android:layout_marginTop="20dp"
                android:background="@drawable/bt_shape"
                android:stateListAnimator="@drawable/state_list_animator_z"
                android:textColor="#bc1919"
                android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">
                <TextView
                    android:id="@+id/tv_resister"
                    android:layout_width="0dp"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:text="@string/registeruser"
                    />

                <TextView
                    android:id="@+id/tv_findpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:textSize="15sp"
                    android:textColor="@drawable/font_selector"
                    android:text="@string/findpassword"
                    />

            </LinearLayout>

            </LinearLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>
